a lot of changes in Client side (renaming)

--- a/src/main/webapp/MainPage/CreateRestaurant.xhtml
+++ b/src/main/webapp/MainPage/CreateRestaurant.xhtml
@@ -76,17 +76,17 @@
                     <h:outputText value="Username"/>
                     <h:inputText value="#{restaurantUserSenzu.username}" />
                     <h:outputText value="Restaurant name"/>
-                    <h:inputText value="#{restaurantUserSenzu.restaurantname}" />
+                    <h:inputText value="#{restaurantUserSenzu.restaurantName}" />
                     <h:outputText value="Email"/>
                     <h:inputText value="#{restaurantUserSenzu.email}" />
                     <h:outputText value="Password"/>
                     <h:inputSecret value="#{restaurantUserSenzu.password}"  redisplay="true"/>
                     <h:outputText value="Owner's name"/>
-                    <h:inputText value="#{restaurantUserSenzu.owner}" />
+                    <h:inputText value="#{restaurantUserSenzu.restaurantOwner}" />
                     <h:outputText value="Restaurant's address"/>
                     <h:inputText value="#{restaurantUserSenzu.address}" />
                     <h:outputText value="Restaurant's opening hours (in format hh:mm-hh:mm)"/>
-                    <h:inputText value="#{restaurantUserSenzu.datetime}" />
+                    <h:inputText value="#{restaurantUserSenzu.openingHours}" />
                     <h:outputText value="Restaurant's prices(cheap : €, average : €€, expensive : €€€)"/>
                     <h:inputText value="#{restaurantUserSenzu.price}" />
                     <h:outputText value="Cooking type"/>
