--- a/src/main/webapp/RestaurantPage/ShowRestaurantUserInfo.xhtml
+++ b/src/main/webapp/RestaurantPage/ShowRestaurantUserInfo.xhtml
@@ -89,7 +89,7 @@
             <h3>
             <h:panelGrid columns="2" style="width:50%;margin:0px auto;">
                 <h:outputText style="font-weight: bold;" value="Restaurant name"/>
-                <h:outputText value="#{loginSenzu.currentUser.restaurantname}"/>
+                <h:outputText value="#{loginSenzu.currentUser.restaurantName}"/>
                 <h:outputText style="font-weight: bold;" value="Username"/>
                 <h:outputText value="#{loginSenzu.currentUser.username}"/>               
                 <h:outputText style="font-weight: bold;" value="Email"/>
@@ -103,11 +103,11 @@
                 <h:outputText style="font-weight: bold;" value="Cooking Type"/>
                 <h:outputText value="#{loginSenzu.currentRestaurant.cookingtype}"/> 
                 <h:outputText style="font-weight: bold;" value="Owner"/>
-                <h:outputText value="#{loginSenzu.currentRestaurant.owner}"/> 
+                <h:outputText value="#{loginSenzu.currentRestaurant.restaurantOwner}"/> 
                 <h:outputText style="font-weight: bold;" value="Opening hours"/>
-                <h:outputText value="#{loginSenzu.currentRestaurant.datetime}"/> 
+                <h:outputText value="#{loginSenzu.currentRestaurant.openingHours}"/> 
                 <h:outputText style="font-weight: bold;" value="Current restaurant name"/>
-                <h:outputText value="#{loginSenzu.currentRestaurant.restaurantname}"/> 
+                <h:outputText value="#{loginSenzu.currentRestaurant.restaurantName}"/> 
                 <h:outputText style="font-weight: bold;" value="Price range"/>
                 <h:outputText value="#{loginSenzu.currentRestaurant.price}"/> 
                 <h:outputText style="font-weight: bold;" value="Menu"/>
