last modifications for See restaurants + added getters and setter properly

--- a/src/main/webapp/UserPage/SeeRestaurant.xhtml
+++ b/src/main/webapp/UserPage/SeeRestaurant.xhtml
@@ -101,7 +101,7 @@
                     <th>Special Diets</th> 
                     <th>Ratings</th>
                 </tr>
-                <ui:repeat value="#{restaurantSenzu.restaurant}" var="item">                                                    
+                <ui:repeat value="#{restaurantSenzu.restaurants}" var="item">                                                    
                     <tr>
                         <td><h:outputText value="#{item.restaurantName}" /></td>
                         <td><h:outputText value="#{item.address}" /></td>
@@ -112,7 +112,7 @@
                         <td><h:outputText value="#{item.contact}" /></td>
                         <td><h:outputText value="#{item.menu}" /></td>
                         <td><h:outputText value="#{item.specialdiet}"  /></td>
-                        <td><h:outputText value="#{item.ratinglist}"  /></td>
+                        <td><h:outputText value="#{item.rating}"  /></td>
                     </tr>           
                 </ui:repeat>
             </table>
