--- a/src/main/webapp/RestaurantPage/ShowRestaurantUserInfo.xhtml
+++ b/src/main/webapp/RestaurantPage/ShowRestaurantUserInfo.xhtml
@@ -115,7 +115,7 @@
                 <h:outputText style="font-weight: bold;" value="Special diet"/>
                 <h:outputText value="#{loginSenzu.currentRestaurant.specialdiet}"/>
                 <h:outputText style="font-weight: bold;" value="Ratings"/>
-                <h:outputText value="#{loginSenzu.currentRestaurant.ratinglist}"/>
+                <h:outputText value="#{loginSenzu.currentRestaurant.rating}"/>
             </h:panelGrid>
             </h3>
         </h:form>
